--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.0.1",
     "pug": "^3.0.2",
     "sequelize": "^6.35.1",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.6"
   }
 }
